# gamestore

./: .dockerignore  Dockerfile  README.md  app.py  balance.py  db.py  docker-compose.yaml  fly.toml  games.py  history.py  images.py  inserts.sql  pyproject.toml  requirements.txt  reviews.py  routes.py  schema.sql  users.py  validation.py
.github/workflows/: deploy.yml
Modules/: balance.py  cart.py  categories.py  games.py  history.py  images.py  library.py  reviews.py  temporaryimages.py  users.py  validation.py  wishlist.py
static/: allgames.css  carousel.js  frontpage-nojs.css  frontpage.css  game_edit.css  gamelayout.css  history.css  inputs.css  navbar.css  profile.css  profile_edit.css  randomizebg.js  singlecolumn.css  singlecolumnlayout.css  style.css  twocolumnlayout.css  twocolums.css  visualstyle.css
static/css/: frontpage.css  game_edit.css  gamelayout.css  inputs.css  profile.css  profile_edit.css  twocolumnlayout.css  visualstyle.css
static/js/: carousel.js  loadicons.js  randomizebg.js
templates/: allgames.html  balance.html  base.html  cart.html  deletegame.html  deletion.html  edit.html  editgame.html  editprofile.html  error.html  frontpage.html  game.html  history.html  library.html  login.html  navbar.html  newgame.html  preview.html  profile.html  register.html  wishlist.html
